# tools

AllInOne/: CMakeLists.txt  mainwidget.ui  ui_mainwidget.h
OpenCVTest/: CMakeLists.txt  p2pProj.cpp  pointGrab.cpp  watershed.cpp
PointsProcess/3rd/CGAL/lib/CGAL/: CGALConfig.cmake
PointsProcess/3rd/CGAL/lib/debug/: CGAL-vc120-mt-gd-4.5.lib  CGAL_Core-vc120-mt-gd-4.5.lib  CGAL_ImageIO-vc120-mt-gd-4.5.lib
PointsProcess/3rd/CGAL/lib/release/: CGAL-vc120-mt-4.5.lib  CGAL_Core-vc120-mt-4.5.lib  CGAL_ImageIO-vc120-mt-4.5.lib
QtOutline/: CMakeLists.txt  glWidget.cpp  glWidget.h  mainwidget.cpp  mainwidget.h
cmakeCudaDirTest/: CMakeLists.txt  CMakeLists_o.txt  main.cpp
cmakeCudaDirTest/lib/: CMakeLists_o.txt  kernel.cu  kernel.h
cmakeCudaTest/: CMakeLists.txt  kernel.cu  main.cpp
cmakeDirTest/: CMakeLists.txt  main.cpp
cmakeDirTest/libFile/: CMakeLists.txt  add.cpp
dataTran/: CMakeLists.txt  main.cpp
factorGraphTest/: CMakeLists.txt  main.cpp  modelFactor.cpp  modelFactor.h  modelToSilhouette.m  myFactor.h  myfactor.cpp  others.cpp  others.h  silhouetteFactor.cpp  silhouetteFactor.h  test.cpp
getpoints/: CMakeLists.txt  data.cpp  data.h  getpoints.cpp  getpoints.h  getpoints.qrc  getpoints.ui  main.cpp  selectpt.cpp  selectpt.h  selectpt.ui
matlabCudaTest/: AddVectors.cu  AddVectors.h  AddVectorsCuda.cpp  AddVectorsCuda.mexw64  main.m
nloptTest/: nloptTest.cpp
pclTest/: CMakeLists.txt  main.cpp  pcltest.cpp  pcltest.h  pcltest.qrc  pcltest.ui  ui_pcltest.h
readAllPath/: CMakeLists.txt  main.cpp  readme.txt
readFixFiles/: CMakeLists.txt  main.cpp  readme.txt
readPDFasWords/: CMakeLists.txt  datapath.txt  message.txt  myslicp.cpp  readme.txt
showingPly/: CMakeLists.txt  main.cpp  pcd.pcd  showingply.cpp  showingply.h  showingply.qrc  showingply.ui  ui_showingply.h
tips/: CMakeLists.txt  changeDialog.cpp  changeDialog.h  changeDialog.ui  main.cpp  tip.cpp  tip.h  tip.qrc  tip.ui
vtkTest/: CMakeLists.txt  main.cpp
writeFiles/: CMakeLists.txt  main.cpp
